# yolo8face_adaface

./: .env.example  .gitignore  README.md  api.py  benchmark_dataset.py  compare_matrix.py  main.py  metrics.json  profile_pipeline.py  pyproject.toml
configs/: config.yaml
src/: __init__.py  utils.py  verification.py
